--- a/files/h5注册页面/styles.css
+++ b/files/h5注册页面/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u1913_div {
+#u1916_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,99 +30,13 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u1913 {
+#u1916 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:1300px;
   height:1800px;
-}
-#u1913_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u1914_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:817px;
-  height:1168px;
-}
-#u1914 {
-  border-width:0px;
-  position:absolute;
-  left:183px;
-  top:222px;
-  width:817px;
-  height:1168px;
-}
-#u1914_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u1915_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:536px;
-  height:78px;
-}
-#u1915 {
-  border-width:0px;
-  position:absolute;
-  left:324px;
-  top:968px;
-  width:536px;
-  height:78px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
-  font-weight:700;
-  font-style:normal;
-  font-size:28px;
-  color:#CCCCCC;
-  text-align:left;
-}
-#u1915_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:21px;
-  width:532px;
-  word-wrap:break-word;
-}
-#u1916_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:138px;
-  height:78px;
-}
-#u1916 {
-  border-width:0px;
-  position:absolute;
-  left:508px;
-  top:1114px;
-  width:138px;
-  height:78px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
-  font-weight:700;
-  font-style:normal;
-  font-size:28px;
-  color:#CCCCCC;
-  text-align:left;
 }
 #u1916_text {
   border-width:0px;
@@ -138,22 +52,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:356px;
-  height:88px;
+  width:817px;
+  height:1168px;
 }
 #u1917 {
   border-width:0px;
   position:absolute;
-  left:644px;
-  top:234px;
-  width:356px;
-  height:88px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
-  font-weight:700;
-  font-style:normal;
-  font-size:28px;
-  color:#CCCCCC;
-  text-align:left;
+  left:183px;
+  top:222px;
+  width:817px;
+  height:1168px;
 }
 #u1917_text {
   border-width:0px;
@@ -169,10 +77,102 @@
   position:absolute;
   left:0px;
   top:0px;
+  width:536px;
+  height:78px;
+}
+#u1918 {
+  border-width:0px;
+  position:absolute;
+  left:324px;
+  top:968px;
+  width:536px;
+  height:78px;
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
+  font-weight:700;
+  font-style:normal;
+  font-size:28px;
+  color:#CCCCCC;
+  text-align:left;
+}
+#u1918_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:21px;
+  width:532px;
+  word-wrap:break-word;
+}
+#u1919_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:138px;
+  height:78px;
+}
+#u1919 {
+  border-width:0px;
+  position:absolute;
+  left:508px;
+  top:1114px;
+  width:138px;
+  height:78px;
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
+  font-weight:700;
+  font-style:normal;
+  font-size:28px;
+  color:#CCCCCC;
+  text-align:left;
+}
+#u1919_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1920_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:356px;
+  height:88px;
+}
+#u1920 {
+  border-width:0px;
+  position:absolute;
+  left:644px;
+  top:234px;
+  width:356px;
+  height:88px;
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
+  font-weight:700;
+  font-style:normal;
+  font-size:28px;
+  color:#CCCCCC;
+  text-align:left;
+}
+#u1920_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1921_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
   width:276px;
   height:104px;
 }
-#u1918 {
+#u1921 {
   border-width:0px;
   position:absolute;
   left:22px;
@@ -180,7 +180,7 @@
   width:276px;
   height:104px;
 }
-#u1918_text {
+#u1921_text {
   border-width:0px;
   position:absolute;
   left:0px;
