--- a/files/h5注册页面/styles.css
+++ b/files/h5注册页面/styles.css
@@ -87,7 +87,7 @@
   top:968px;
   width:536px;
   height:78px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   font-size:28px;
@@ -117,7 +117,7 @@
   top:1114px;
   width:138px;
   height:78px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   font-size:28px;
@@ -148,7 +148,7 @@
   top:234px;
   width:356px;
   height:88px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   font-size:28px;
