--- a/files/首页/styles.css
+++ b/files/首页/styles.css
@@ -1462,6 +1462,14 @@
   width:173px;
   word-wrap:break-word;
 }
+#u3170_ann {
+  border-width:0px;
+  position:absolute;
+  left:360px;
+  top:1889px;
+  width:1px;
+  height:1px;
+}
 #u3171_div {
   border-width:0px;
   position:absolute;
