--- a/files/登陆注册页/styles.css
+++ b/files/登陆注册页/styles.css
@@ -37,3 +37,23 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u3114 {
+  border-width:0px;
+  position:absolute;
+  left:553px;
+  top:11px;
+  width:60px;
+  height:43px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
+#u3115 {
+  border-width:0px;
+  position:absolute;
+  left:623px;
+  top:11px;
+  width:60px;
+  height:43px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
